Created the files that this practice will require, main, and the mutable class files. Added the stubs for the functions that will be needed and also the big O requirements for each function

--- a/mutableArray/mutableArray.vcxproj
+++ b/mutableArray/mutableArray.vcxproj
@@ -139,6 +139,11 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
+    <ClCompile Include="main.cpp" />
+    <ClCompile Include="mutableArray.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="mutableArray.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
